<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cream"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/result_tv"/>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/button_layout"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/C"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/close_bracket"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/background"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/background"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/background"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtract"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/background"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:backgroundTint="@color/AC"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/background"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_decimal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/decimal"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="@color/background"
                app:cornerRadius="36dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>